<?xml version="1.0" encoding="utf-8"?>

<TableRow
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/device_table_row_template">

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/device_name"
    android:id="@+id/device_name_value" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/ip_address"
    android:textSize="14sp"
    android:id="@+id/ip_address_value"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/mac_address"
    android:textSize="14sp"
    android:id="@+id/mac_address_value"/>
<CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_gravity="end"
    android:id="@+id/notification_value"/>
</TableRow>